# cisco-business-aggregator

./: .env.example  .gitignore  PRODUCT_INNOVATION_README.md  README.md  cache_utils.py  company_url_finder.py  main.py  product_innovation_interface.py  pyproject.toml  pytest.ini  requirements.txt  research_agent.py  setup.bat  setup.py  setup.sh  setup_directories.py  simple_test.py  test_product_innovation.py
agents/: __init__.py  company_url_finder.py  product_innovation_agent.py  research_agent.py
archived/: check_reports_dir.py  research_agent.py
archived/tests/: test_local_storage.py
config/: __init__.py  logging_config.py  settings.py
docs/: product_innovation.md
interfaces/: __init__.py  product_innovation_interface.py  research_interface.py
models/: __init__.py  company.py  product.py  report.py
services/: __init__.py  gcs_service.py  openai_service.py  tavily_service.py
tests/: __init__.py  test_cache.py  test_company_model.py
utils/: __init__.py  cache.py  file_utils.py  report_utils.py  storage.py
