[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "news-research-agent"
version = "0.1.0"
description = "A research agent that generates reports on companies based on news and web content"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Proprietary"}
authors = [
    {name = "Cisco Systems", email = "johscot2@cisco.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "requests>=2.25.0",
    "aiohttp>=3.7.4",
    "asyncio>=3.4.3",
    "open-deep-research>=0.1.0",
    "markdown>=3.3.0",
    "python-docx>=0.8.11",
    "openpyxl>=3.0.7",
    "python-dotenv>=0.19.0",
    "tavily-python>=0.1.0",
    "langchain>=0.0.267",
    "langchain-openai>=0.0.2",
    "langgraph>=0.0.15",
    "google-cloud-storage>=2.0.0",
    "google-auth>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.3.0",
    "isort>=5.10.1",
    "flake8>=4.0.1",
    "mypy>=0.910",
]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py" 